--- a/LaTeX/ZusammenfassungAusblick.tex
+++ b/LaTeX/ZusammenfassungAusblick.tex
@@ -14,4 +14,4 @@ If the subject is approached from the perspective of the current state of the te
 
 Utilizing a 5 axis router, the drop deployment procedure is automated. As color reservoirs 4 ink bottles with the highest saturation levels of the colors A, B, C and D are used with a brightener to achieve the shades of each color. The system is utilized to conduct some experiments to develop a model for the printing process. Ink and ceramic properties like the ink viscosities and surface tensions are obtained, as well as the ceramic porosity. The inks have a higher viscosity than water, which helps to extinguish the satellite drops. The porosity of the zirconia is obtained to be 43\%, which defines the volume to be filled with the ink and the brightener.
 
-In summary, the printing speed can be accelerated with shorter absorption durations which are proved to decline 50\% with a 60\textdegree C increase of the temperature. The other most most important factor affecting the printing speed is the volume of a single drop. The most optimum drop volume is found out to be 25nL when the printing resolution is consider as the key factor. Printing experiments up to a distance of 20mm cause no significant quality variance. The printing measurement were replied at angles of 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space and result was the same. Printing quality was as good as 0\textdegree \space  when the process was replied at 45\textdegree \space .The effect of proximity plays a significant role in the printing trace distance. For the ink intensity of 1250 nl/mm, which is approximately the fully saturated ink amount for the trace on the test sample, the optimum trace distance  was observed to be 3mm. Afterwards the shade generation method is inspected in a discontinuous method rather than continuous lines to eliminate the effect of the neighboring regions with high ink amounts. For the 25 nL and 50 nL drop volumes a total ink amount of 2000 nL can be said to reach the aimed color intensity with inevitable lateral ink spreading. Charting of the color shade vs the ink amount is not an efficient approach to the shade generation process because of the different spreading ranges caused by different liquid amounts. The point oriented shade acquisition approach can be realized with interlayered deployment of brightener and ink until reaching the total liquid volume of 2000 nL. The brightener to ink ratios for target shade acquisition are yet to be analyzed in order to generate a model for the automated printing process. In the last experiment it was observed that smaller FWHM could only be observed with lower ink amount. It could be considered to generate inks for the printing purposes with higher saturation levels ,in comparison to the inks on the market, specially for the printing process. Finally, a model can be generated utilizing the point spread function analysis and optical dot gain phenomenon in association, in order to predestine the perceived color at the end of the sintering process. 
+In summary, the printing speed can be accelerated with shorter absorption durations which are proved to decline 50\% with a 60\textdegree C increase of the temperature. The other most most important factor affecting the printing speed is the volume of a single drop. The most optimum drop volume is found out to be 25nL when the printing resolution is consider as the key factor. Printing experiments up to a distance of 20mm cause no significant quality variance. The printing measurement were replied at angles of 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space and result was the same. Printing quality was as good as 0\textdegree \space  when the process was replied at 45\textdegree \space .The effect of proximity plays a significant role in the printing trace distance. For the ink intensity of 1250 nl/mm, which is approximately the fully saturated ink amount for the trace on the test sample, the optimum trace distance  was observed to be 3mm. Afterwards the shade generation method is inspected in a discontinuous method rather than continuous lines to eliminate the effect of the neighboring regions with high ink amounts. For the 25 nL and 50 nL drop volumes a total ink amount of 2000 nL can be said to reach the aimed color intensity with inevitable lateral ink spreading. Charting of the color shade vs the ink amount is not an efficient approach to the shade generation process because of the different spreading ranges caused by different liquid amounts. The point oriented shade acquisition approach can be realized with interlayered deployment of brightener and ink until reaching the total liquid volume of 2000 nL. The brightener to ink ratios for target shade acquisition are yet to be analyzed in order to generate a model for the automated printing process. In the last experiment it was observed that smaller FWHM could only be observed with lower ink amount. It could be considered to generate inks for the printing purposes with higher saturation levels, in comparison to the inks on the market, especially for the printing process. Finally a model can be generated utilizing the point spread function analysis and optical dot gain phenomenon in association, in order to predestine the perceived color at the end of the sintering process. 
